[gd_scene load_steps=5 format=3 uid="uid://b7x80am2n3k4l"]

[ext_resource type="Script" path="res://multiplayer_client.gd" id="1_mp_game"]
[ext_resource type="PackedScene" path="res://scenes/ground.tscn" id="2_ground"]
[ext_resource type="PackedScene" path="res://scenes/launchpad.tscn" id="4_launchpad"]
[ext_resource type="PackedScene" path="res://scenes/player_spaceship.tscn" id="6_player"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 48

[node name="MultiplayerGame" type="Node2D"]
script = ExtResource("1_mp_game")

[node name="Ground" parent="." instance=ExtResource("2_ground")]
position = Vector2(600, 1257)
gravity_strength = 120.0

[node name="Launchpad1" parent="." instance=ExtResource("4_launchpad")]
position = Vector2(300, 1221)

[node name="Launchpad2" parent="." instance=ExtResource("4_launchpad")]
position = Vector2(600, 1221)

[node name="Launchpad3" parent="." instance=ExtResource("4_launchpad")]
position = Vector2(900, 1221)

[node name="Players" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 700)
enabled = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="WaitingLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
text = "Waiting for players..."
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerCount" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_bottom = 50.0
text = "Players: 1/3"
horizontal_alignment = 2

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -70.0
theme_override_font_sizes/font_size = 48
text = "1"
horizontal_alignment = 1

[node name="ChatInput" type="LineEdit" parent="UI"]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -60.0
offset_right = 300.0
offset_bottom = -20.0
placeholder_text = "Press Enter to chat..."
max_length = 100

[node name="AscendLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 72
text = "ASCEND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SurviveLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 48
text = "ONLY ONE WILL SURVIVE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShootLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 48
text = "PRESS SPACE TO SHOOT"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CongratsLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -50.0
offset_right = 500.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 48
text = "CONGRATS PLAYER, YOU HAVE ASCENDED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WorthLabel" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -50.0
offset_right = 400.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 48
text = "BUT WHAT WAS IT WORTH?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WhiteFade" type="ColorRect" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(1, 1, 1, 0)